--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
   </head>
   <body>
     <noscript>
-      This is your fallback content in case JavaScript fails to load.
+      This is your fallback content in case JavaScript fails to load. 1
     </noscript>
     <div id="q-app"></div>
     <!-- Todo: only include in production -->
